--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img
-          src="https://instagram.fbbi1-1.fna.fbcdn.net/v/t51.12442-15/e35/c0.419.1081.1081a/s150x150/46164538_2394997807195090_2867075818134552652_n.jpg?_nc_ht=instagram.fbbi1-1.fna.fbcdn.net&_nc_cat=110&_nc_ohc=c_Y-CwqotP0AX_ieR-W&oh=e7de644d6f7f5774f296b84d0347db42&oe=5F57F444"
-          width="300" height="300" alt=""></td>
+      <td><img src="233.jpg" width="250" height="300 " alt="Debashis's profile photo"></td>
+
       <td>
         <h1>Debashis Baral</h1>
         <p><em>Student</em></p>
@@ -19,7 +18,7 @@
       </td>
     </tr>
   </table>
-<hr>
+  <hr>
 
   <h3>Hobbies</h3>
   <ul>
