Add initial cv files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="233.jpg" width="250" height="300 " alt="Debashis's profile photo"></td>
+      <td><img src="IMG-20181214-WA0637-1.jpg" width="250" height="200 " alt="Debashis's profile photo"></td>
 
       <td>
         <h1>Debashis Baral</h1>
